cmake_minimum_required(VERSION 3.20)
project(advent_of_code_2023)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(Utility)
add_subdirectory(Day_01)
add_subdirectory(Day_02)
add_subdirectory(Day_03)
add_subdirectory(Day_04)
add_subdirectory(Day_05)
add_subdirectory(Day_06)
add_subdirectory(Day_07)
add_subdirectory(Day_08)
add_subdirectory(Day_09)
add_subdirectory(Day_10)
add_subdirectory(Day_11)
add_subdirectory(Day_12)
add_subdirectory(Day_13)
add_subdirectory(Day_14)
add_subdirectory(Day_15)
add_subdirectory(Day_16)
add_subdirectory(Day_17)
add_subdirectory(Day_18)
add_subdirectory(Day_19)
add_subdirectory(Day_20)
add_subdirectory(Day_21)
add_subdirectory(Day_22)
add_subdirectory(Day_23)
add_subdirectory(Day_24)
add_subdirectory(Day_25)